// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/Error Render: match snapshot 1`] = `
.c13.ekspanderbartPanel--apen .ReactCollapse--collapse {
  will-change: max-height,height;
  max-height: 150em;
  -webkit-animation: biJkQB 250ms ease;
  animation: biJkQB 250ms ease;
}

.c13.ekspanderbartPanel--lukket .ReactCollapse--collapse {
  will-change: max-height,height;
  max-height: 0;
  -webkit-animation: hIThqZ 250ms ease;
  animation: hIThqZ 250ms ease;
}

ui-fss.g1[id="c12"] {
  content: "c13,";
}

.c5 {
  margin-bottom: 2rem;
}

.c16 {
  margin-bottom: 1rem;
}

ui-fss.g4[id="c4"] {
  content: "c5,c16,";
}

.c10 {
  border-width: 1px;
  border-style: solid;
}

.c10 .ekspanderbartPanel__knapp {
  background: none;
  border: none;
}

.c10 .ekspanderbartPanel__hode:hover {
  background-color: !important;
}

.c10 p {
  font-size: inherit;
  line-height: inherit;
}

ui-fss.g14[id="c8"] {
  content: "c10,";
}

.c7 {
  width: 80%;
  margin: 1rem;
  text-align: center;
}

ui-fss.g16[id="c6"] {
  content: "c7,";
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

ui-fss.g17[id="c0"] {
  content: "c1,";
}

.c11 {
  min-width: 50%;
}

ui-fss.g18[id="c9"] {
  content: "c11,";
}

.c15 {
  width: 60%;
  margin: 1rem;
  min-height: 0.25rem;
  border-bottom: 1px solid;
}

ui-fss.g19[id="c14"] {
  content: "c15,";
}

.c3 {
  height: 110px;
}

ui-fss.g21[id="c2"] {
  content: "c3,";
}

<Error
  error={
    Object {
      "stack": "foo",
    }
  }
  type="something"
>
  <Component>
    <div
      className="mock-c-topcontainer"
    >
      <styled.div>
        <div
          className="c0 c1"
        >
          <Styled(EESSIPensjonVeileder)
            data-test-id="p-error__veileder-id"
            mood="trist"
          >
            <EESSIPensjonVeileder
              className="c2 c3"
              data-test-id="p-error__veileder-id"
              mood="trist"
            >
              <div
                className="c2 c3"
                data-test-id="c-eessipensjonveileder"
              >
                <img
                  alt="nav-trist-veileder"
                  height={130}
                  src="navPensjonTristOrangeVeileder.png"
                  width={130}
                />
              </div>
            </EESSIPensjonVeileder>
          </Styled(EESSIPensjonVeileder)>
          <styled.div
            data-size="2"
          >
            <div
              className="c4 c5"
              data-size="2"
            />
          </styled.div>
          <Styled(Undertittel)
            data-test-id="p-error__title-id"
          >
            <Undertittel
              className=""
              data-test-id="p-error__title-id"
            >
              <TypografiBase
                className=""
                data-test-id="p-error__title-id"
                type="undertittel"
              >
                <h2
                  className="typo-undertittel "
                  data-test-id="p-error__title-id"
                >
                  ui:error-404-title
                </h2>
              </TypografiBase>
            </Undertittel>
          </Styled(Undertittel)>
          <styled.div
            dangerouslySetInnerHTML={
              Object {
                "__html": "ui:error-404-description",
              }
            }
            data-test-id="p-error__description-id"
          >
            <div
              className="c6 c7"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "ui:error-404-description",
                }
              }
              data-test-id="p-error__description-id"
            />
          </styled.div>
          <Styled(Styled(ExpandingPanel))
            data-test-id="p-error__content-error-id"
            heading="ui:error-header"
            highContrast={false}
            id="p-error__content-error-id"
            onOpen={[Function]}
          >
            <ExpandingPanel
              className="c8 c9 c10 c11"
              data-test-id="p-error__content-error-id"
              heading="ui:error-header"
              highContrast={false}
              id="p-error__content-error-id"
              onOpen={[Function]}
            >
              <Component
                theme={
                  Object {
                    "alternative-background-color": "#E9E7E7",
                    "black": "#000000",
                    "border-radius-base": "4px",
                    "border-radius-large": "6px",
                    "border-radius-small": "2px",
                    "container-desktop": "(940px + @grid-gutter-width)",
                    "container-large-desktop": "(1140px + @grid-gutter-width)",
                    "container-lg": "(1140px + @grid-gutter-width)",
                    "container-md": "(940px + @grid-gutter-width)",
                    "container-sm": "(720px + @grid-gutter-width)",
                    "container-tablet": "(720px + @grid-gutter-width)",
                    "fokusFarge": "#254a6c",
                    "grayBackground": "#E9E7E7",
                    "grayIcon": "#B7B1A9",
                    "grayInactive": "#78706A",
                    "grayModia": "#333333",
                    "grid-columns": "12",
                    "grid-float-breakpoint": "768px",
                    "grid-float-breakpoint-max": "(@grid-float-breakpoint - 1)",
                    "grid-gutter-width": "16px",
                    "inverted-font-color": "#FFFFFF",
                    "line-height-large": "1.3333333",
                    "line-height-small": "1.5",
                    "main-active-color": "#a3dff3",
                    "main-background-color": "#FFFFFF",
                    "main-border-color": "#78706A",
                    "main-border-radius": "4px",
                    "main-disabled-color": "#B7B1A9",
                    "main-error-color": "#BA3A26",
                    "main-focus-color": "#254a6c",
                    "main-font-color": "#3E3832",
                    "main-hover-color": "#e0f4fb",
                    "main-interactive-color": "#0067C5",
                    "main-success-color": "#06893A",
                    "main-warning-color": "#FF9100",
                    "navBla": "#0067C5",
                    "navBlaDarken20": "#0c5da7",
                    "navBlaDarken40": "#18548a",
                    "navBlaDarken60": "#254a6c",
                    "navBlaDarken80": "#31414f",
                    "navBlaLighten20": "#3385d0",
                    "navBlaLighten40": "#66a3dc",
                    "navBlaLighten60": "#99c2e7",
                    "navBlaLighten80": "#cce0f3",
                    "navDypBla": "#005B82",
                    "navDypBlaDarken20": "#0c5472",
                    "navDypBlaDarken40": "#184d62",
                    "navDypBlaDarken60": "#254652",
                    "navDypBlaDarken80": "#313f42",
                    "navDypBlaLighten20": "#337b9b",
                    "navDypBlaLighten40": "#669cb4",
                    "navDypBlaLighten60": "#99bdcd",
                    "navDypBlaLighten80": "#ccdee6",
                    "navGra20": "#C6C2BF",
                    "navGra40": "#B7B1A9",
                    "navGra60": "#78706A",
                    "navGra80": "#59514B",
                    "navGronn": "#06893A",
                    "navGronnDarken20": "#117838",
                    "navGronnDarken40": "#1c6836",
                    "navGronnDarken60": "#275835",
                    "navGronnDarken80": "#324833",
                    "navGronnLighten20": "#37a061",
                    "navGronnLighten40": "#69b888",
                    "navGronnLighten60": "#9bcfb0",
                    "navGronnLighten80": "#cde7d7",
                    "navLilla": "#634689",
                    "navLillaDarken20": "#5b4377",
                    "navLillaDarken40": "#544066",
                    "navLillaDarken60": "#4c3d54",
                    "navLillaDarken80": "#453a43",
                    "navLillaLighten20": "#826ba0",
                    "navLillaLighten40": "#a190b8",
                    "navLillaLighten60": "#c0b5cf",
                    "navLillaLighten80": "#dfdae7",
                    "navLimeGronn": "#A2AD00",
                    "navLimeGronnDarken20": "#8e950a",
                    "navLimeGronnDarken40": "#7a7e14",
                    "navLimeGronnDarken60": "#66661e",
                    "navLimeGronnDarken80": "#524f28",
                    "navLimeGronnLighten20": "#b4bd33",
                    "navLimeGronnLighten40": "#c7cd66",
                    "navLimeGronnLighten60": "#d9de99",
                    "navLimeGronnLighten80": "#eceecc",
                    "navLysBla": "#66CBEC",
                    "navLysBlaDarken20": "#5eadc6",
                    "navLysBlaDarken40": "#5690a1",
                    "navLysBlaDarken60": "#4e727c",
                    "navLysBlaDarken80": "#465557",
                    "navLysBlaLighten20": "#84d5ef",
                    "navLysBlaLighten40": "#a3dff3",
                    "navLysBlaLighten60": "#c1eaf7",
                    "navLysBlaLighten80": "#e0f4fb",
                    "navLysGra": "#E9E7E7",
                    "navMorkGra": "#3E3832",
                    "navOransje": "#FF9100",
                    "navOransjeDarken20": "#d87f0a",
                    "navOransjeDarken40": "#b16d14",
                    "navOransjeDarken60": "#8b5b1e",
                    "navOransjeDarken80": "#644928",
                    "navOransjeLighten20": "#ffa733",
                    "navOransjeLighten40": "#ffbd66",
                    "navOransjeLighten60": "#ffd399",
                    "navOransjeLighten80": "#ffe9cc",
                    "navRod": "#C30000",
                    "navRodDarken20": "#a80b0a",
                    "navRodDarken40": "#8d1614",
                    "navRodDarken60": "#73211e",
                    "navRodDarken80": "#582c28",
                    "navRodLighten20": "#cf3333",
                    "navRodLighten40": "#db6666",
                    "navRodLighten60": "#e79999",
                    "navRodLighten80": "#f3cccc",
                    "orangeFocus": "#FFBD66",
                    "orangeFocusDarken20": "#d8a25b",
                    "orangeFocusDarken40": "#b18751",
                    "orangeFocusDarken60": "#8b6d46",
                    "orangeFocusDarken80": "#64523c",
                    "orangeFocusLighten20": "#ffca84",
                    "orangeFocusLighten40": "#ffd7a3",
                    "orangeFocusLighten60": "#ffe4c1",
                    "orangeFocusLighten80": "#fff1e0",
                    "padding-base-horizontal": "12px",
                    "padding-base-vertical": "6px",
                    "padding-large-horizontal": "16px",
                    "padding-large-vertical": "10px",
                    "padding-small-horizontal": "10px",
                    "padding-small-vertical": "5px",
                    "padding-xs-horizontal": "5px",
                    "padding-xs-vertical": "1px",
                    "pinkErrorBg": "#F3E3E3",
                    "redError": "#BA3A26",
                    "redErrorDarken20": "#a13928",
                    "redErrorDarken40": "#88392a",
                    "redErrorDarken60": "#6f382d",
                    "redErrorDarken80": "#56382f",
                    "redErrorLighten20": "#c76151",
                    "redErrorLighten40": "#d5887c",
                    "redErrorLighten60": "#e3b0a8",
                    "redErrorLighten80": "#f1d7d3",
                    "screen-desktop": "992px",
                    "screen-lg": "1200px",
                    "screen-lg-desktop": "1200px",
                    "screen-lg-min": "1200px",
                    "screen-md": "992px",
                    "screen-md-max": "(@screen-lg-min - 1)",
                    "screen-md-min": "992px",
                    "screen-sm": "768px",
                    "screen-sm-max": "(@screen-md-min - 1)",
                    "screen-sm-min": "768px",
                    "screen-tablet": "768px",
                    "screen-xs-max": "(@screen-sm-min - 1)",
                    "type": "theme",
                    "white": "#FFFFFF",
                  }
                }
              >
                <styled.div
                  className="ekspanderbartPanel c8 c9 c10 c11 ekspanderbartPanel--lukket"
                  id="p-error__content-error-id"
                  style={Object {}}
                >
                  <div
                    className="c12 c13 ekspanderbartPanel c8 c9 c10 c11 ekspanderbartPanel--lukket"
                    id="p-error__content-error-id"
                    style={Object {}}
                  >
                    <div
                      aria-expanded={false}
                      className="ekspanderbartPanel__hode"
                      data-test-id="c-expandingpanel__head-id"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="ekspanderbartPanel__flex-wrapper"
                        data-test-id="c-expandingpanel__body-id"
                      >
                        ui:error-header
                        <button
                          aria-expanded={false}
                          aria-label="ui:open"
                          className="ekspanderbartPanel__knapp"
                          data-test-id="c-expandingpanel__button-id"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          <span
                            className="ekspanderbartPanel__indikator"
                          />
                        </button>
                      </div>
                    </div>
                    <UnmountClosed
                      id="234054344-08881-7819-03837-1328219371302"
                      isOpened={false}
                      onRest={[Function]}
                    />
                  </div>
                </styled.div>
              </Component>
            </ExpandingPanel>
          </Styled(Styled(ExpandingPanel))>
          <div
            data-test-id="p-error__footer-id"
          >
            <styled.div>
              <div
                className="c14 c15"
              />
            </styled.div>
            <styled.div>
              <div
                className="c4 c16"
              />
            </styled.div>
            <Normaltekst>
              <TypografiBase
                type="normaltekst"
              >
                <p
                  className="typo-normal"
                >
                  ui:error-404-footer
                </p>
              </TypografiBase>
            </Normaltekst>
          </div>
        </div>
      </styled.div>
    </div>
  </Component>
</Error>
`;

exports[`pages/Error Renders 1`] = `
.c13.ekspanderbartPanel--apen .ReactCollapse--collapse {
  will-change: max-height,height;
  max-height: 150em;
  -webkit-animation: biJkQB 250ms ease;
  animation: biJkQB 250ms ease;
}

.c13.ekspanderbartPanel--lukket .ReactCollapse--collapse {
  will-change: max-height,height;
  max-height: 0;
  -webkit-animation: hIThqZ 250ms ease;
  animation: hIThqZ 250ms ease;
}

ui-fss.g1[id="c12"] {
  content: "c13,";
}

.c5 {
  margin-bottom: 2rem;
}

.c16 {
  margin-bottom: 1rem;
}

ui-fss.g4[id="c4"] {
  content: "c5,c16,";
}

.c10 {
  border-width: 1px;
  border-style: solid;
}

.c10 .ekspanderbartPanel__knapp {
  background: none;
  border: none;
}

.c10 .ekspanderbartPanel__hode:hover {
  background-color: !important;
}

.c10 p {
  font-size: inherit;
  line-height: inherit;
}

ui-fss.g14[id="c8"] {
  content: "c10,";
}

.c7 {
  width: 80%;
  margin: 1rem;
  text-align: center;
}

ui-fss.g16[id="c6"] {
  content: "c7,";
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

ui-fss.g17[id="c0"] {
  content: "c1,";
}

.c11 {
  min-width: 50%;
}

ui-fss.g18[id="c9"] {
  content: "c11,";
}

.c15 {
  width: 60%;
  margin: 1rem;
  min-height: 0.25rem;
  border-bottom: 1px solid;
}

ui-fss.g19[id="c14"] {
  content: "c15,";
}

.c3 {
  height: 110px;
}

ui-fss.g21[id="c2"] {
  content: "c3,";
}

<Error
  error={
    Object {
      "stack": "foo",
    }
  }
  type="something"
>
  <Component>
    <div
      className="mock-c-topcontainer"
    >
      <styled.div>
        <div
          className="c0 c1"
        >
          <Styled(EESSIPensjonVeileder)
            data-test-id="p-error__veileder-id"
            mood="trist"
          >
            <EESSIPensjonVeileder
              className="c2 c3"
              data-test-id="p-error__veileder-id"
              mood="trist"
            >
              <div
                className="c2 c3"
                data-test-id="c-eessipensjonveileder"
              >
                <img
                  alt="nav-trist-veileder"
                  height={130}
                  src="navPensjonTristOrangeVeileder.png"
                  width={130}
                />
              </div>
            </EESSIPensjonVeileder>
          </Styled(EESSIPensjonVeileder)>
          <styled.div
            data-size="2"
          >
            <div
              className="c4 c5"
              data-size="2"
            />
          </styled.div>
          <Styled(Undertittel)>
            <Undertittel
              className=""
            >
              <TypografiBase
                className=""
                type="undertittel"
              >
                <h2
                  className="typo-undertittel "
                >
                  ui:error-404-title
                </h2>
              </TypografiBase>
            </Undertittel>
          </Styled(Undertittel)>
          <styled.div
            dangerouslySetInnerHTML={
              Object {
                "__html": "ui:error-404-description",
              }
            }
          >
            <div
              className="c6 c7"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "ui:error-404-description",
                }
              }
            />
          </styled.div>
          <Styled(Styled(ExpandingPanel))
            heading="ui:error-header"
            highContrast={false}
            id="p-error__content-error-id"
            onOpen={[Function]}
          >
            <ExpandingPanel
              className="c8 c9 c10 c11"
              heading="ui:error-header"
              highContrast={false}
              id="p-error__content-error-id"
              onOpen={[Function]}
            >
              <Component
                theme={
                  Object {
                    "alternative-background-color": "#E9E7E7",
                    "black": "#000000",
                    "border-radius-base": "4px",
                    "border-radius-large": "6px",
                    "border-radius-small": "2px",
                    "container-desktop": "(940px + @grid-gutter-width)",
                    "container-large-desktop": "(1140px + @grid-gutter-width)",
                    "container-lg": "(1140px + @grid-gutter-width)",
                    "container-md": "(940px + @grid-gutter-width)",
                    "container-sm": "(720px + @grid-gutter-width)",
                    "container-tablet": "(720px + @grid-gutter-width)",
                    "fokusFarge": "#254a6c",
                    "grayBackground": "#E9E7E7",
                    "grayIcon": "#B7B1A9",
                    "grayInactive": "#78706A",
                    "grayModia": "#333333",
                    "grid-columns": "12",
                    "grid-float-breakpoint": "768px",
                    "grid-float-breakpoint-max": "(@grid-float-breakpoint - 1)",
                    "grid-gutter-width": "16px",
                    "inverted-font-color": "#FFFFFF",
                    "line-height-large": "1.3333333",
                    "line-height-small": "1.5",
                    "main-active-color": "#a3dff3",
                    "main-background-color": "#FFFFFF",
                    "main-border-color": "#78706A",
                    "main-border-radius": "4px",
                    "main-disabled-color": "#B7B1A9",
                    "main-error-color": "#BA3A26",
                    "main-focus-color": "#254a6c",
                    "main-font-color": "#3E3832",
                    "main-hover-color": "#e0f4fb",
                    "main-interactive-color": "#0067C5",
                    "main-success-color": "#06893A",
                    "main-warning-color": "#FF9100",
                    "navBla": "#0067C5",
                    "navBlaDarken20": "#0c5da7",
                    "navBlaDarken40": "#18548a",
                    "navBlaDarken60": "#254a6c",
                    "navBlaDarken80": "#31414f",
                    "navBlaLighten20": "#3385d0",
                    "navBlaLighten40": "#66a3dc",
                    "navBlaLighten60": "#99c2e7",
                    "navBlaLighten80": "#cce0f3",
                    "navDypBla": "#005B82",
                    "navDypBlaDarken20": "#0c5472",
                    "navDypBlaDarken40": "#184d62",
                    "navDypBlaDarken60": "#254652",
                    "navDypBlaDarken80": "#313f42",
                    "navDypBlaLighten20": "#337b9b",
                    "navDypBlaLighten40": "#669cb4",
                    "navDypBlaLighten60": "#99bdcd",
                    "navDypBlaLighten80": "#ccdee6",
                    "navGra20": "#C6C2BF",
                    "navGra40": "#B7B1A9",
                    "navGra60": "#78706A",
                    "navGra80": "#59514B",
                    "navGronn": "#06893A",
                    "navGronnDarken20": "#117838",
                    "navGronnDarken40": "#1c6836",
                    "navGronnDarken60": "#275835",
                    "navGronnDarken80": "#324833",
                    "navGronnLighten20": "#37a061",
                    "navGronnLighten40": "#69b888",
                    "navGronnLighten60": "#9bcfb0",
                    "navGronnLighten80": "#cde7d7",
                    "navLilla": "#634689",
                    "navLillaDarken20": "#5b4377",
                    "navLillaDarken40": "#544066",
                    "navLillaDarken60": "#4c3d54",
                    "navLillaDarken80": "#453a43",
                    "navLillaLighten20": "#826ba0",
                    "navLillaLighten40": "#a190b8",
                    "navLillaLighten60": "#c0b5cf",
                    "navLillaLighten80": "#dfdae7",
                    "navLimeGronn": "#A2AD00",
                    "navLimeGronnDarken20": "#8e950a",
                    "navLimeGronnDarken40": "#7a7e14",
                    "navLimeGronnDarken60": "#66661e",
                    "navLimeGronnDarken80": "#524f28",
                    "navLimeGronnLighten20": "#b4bd33",
                    "navLimeGronnLighten40": "#c7cd66",
                    "navLimeGronnLighten60": "#d9de99",
                    "navLimeGronnLighten80": "#eceecc",
                    "navLysBla": "#66CBEC",
                    "navLysBlaDarken20": "#5eadc6",
                    "navLysBlaDarken40": "#5690a1",
                    "navLysBlaDarken60": "#4e727c",
                    "navLysBlaDarken80": "#465557",
                    "navLysBlaLighten20": "#84d5ef",
                    "navLysBlaLighten40": "#a3dff3",
                    "navLysBlaLighten60": "#c1eaf7",
                    "navLysBlaLighten80": "#e0f4fb",
                    "navLysGra": "#E9E7E7",
                    "navMorkGra": "#3E3832",
                    "navOransje": "#FF9100",
                    "navOransjeDarken20": "#d87f0a",
                    "navOransjeDarken40": "#b16d14",
                    "navOransjeDarken60": "#8b5b1e",
                    "navOransjeDarken80": "#644928",
                    "navOransjeLighten20": "#ffa733",
                    "navOransjeLighten40": "#ffbd66",
                    "navOransjeLighten60": "#ffd399",
                    "navOransjeLighten80": "#ffe9cc",
                    "navRod": "#C30000",
                    "navRodDarken20": "#a80b0a",
                    "navRodDarken40": "#8d1614",
                    "navRodDarken60": "#73211e",
                    "navRodDarken80": "#582c28",
                    "navRodLighten20": "#cf3333",
                    "navRodLighten40": "#db6666",
                    "navRodLighten60": "#e79999",
                    "navRodLighten80": "#f3cccc",
                    "orangeFocus": "#FFBD66",
                    "orangeFocusDarken20": "#d8a25b",
                    "orangeFocusDarken40": "#b18751",
                    "orangeFocusDarken60": "#8b6d46",
                    "orangeFocusDarken80": "#64523c",
                    "orangeFocusLighten20": "#ffca84",
                    "orangeFocusLighten40": "#ffd7a3",
                    "orangeFocusLighten60": "#ffe4c1",
                    "orangeFocusLighten80": "#fff1e0",
                    "padding-base-horizontal": "12px",
                    "padding-base-vertical": "6px",
                    "padding-large-horizontal": "16px",
                    "padding-large-vertical": "10px",
                    "padding-small-horizontal": "10px",
                    "padding-small-vertical": "5px",
                    "padding-xs-horizontal": "5px",
                    "padding-xs-vertical": "1px",
                    "pinkErrorBg": "#F3E3E3",
                    "redError": "#BA3A26",
                    "redErrorDarken20": "#a13928",
                    "redErrorDarken40": "#88392a",
                    "redErrorDarken60": "#6f382d",
                    "redErrorDarken80": "#56382f",
                    "redErrorLighten20": "#c76151",
                    "redErrorLighten40": "#d5887c",
                    "redErrorLighten60": "#e3b0a8",
                    "redErrorLighten80": "#f1d7d3",
                    "screen-desktop": "992px",
                    "screen-lg": "1200px",
                    "screen-lg-desktop": "1200px",
                    "screen-lg-min": "1200px",
                    "screen-md": "992px",
                    "screen-md-max": "(@screen-lg-min - 1)",
                    "screen-md-min": "992px",
                    "screen-sm": "768px",
                    "screen-sm-max": "(@screen-md-min - 1)",
                    "screen-sm-min": "768px",
                    "screen-tablet": "768px",
                    "screen-xs-max": "(@screen-sm-min - 1)",
                    "type": "theme",
                    "white": "#FFFFFF",
                  }
                }
              >
                <styled.div
                  className="ekspanderbartPanel c8 c9 c10 c11 ekspanderbartPanel--lukket"
                  id="p-error__content-error-id"
                  style={Object {}}
                >
                  <div
                    className="c12 c13 ekspanderbartPanel c8 c9 c10 c11 ekspanderbartPanel--lukket"
                    id="p-error__content-error-id"
                    style={Object {}}
                  >
                    <div
                      aria-expanded={false}
                      className="ekspanderbartPanel__hode"
                      data-test-id="c-expandingpanel__head-id"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      tabIndex={0}
                    >
                      <div
                        className="ekspanderbartPanel__flex-wrapper"
                        data-test-id="c-expandingpanel__body-id"
                      >
                        ui:error-header
                        <button
                          aria-expanded={false}
                          aria-label="ui:open"
                          className="ekspanderbartPanel__knapp"
                          data-test-id="c-expandingpanel__button-id"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                        >
                          <span
                            className="ekspanderbartPanel__indikator"
                          />
                        </button>
                      </div>
                    </div>
                    <UnmountClosed
                      id="110616163-28871-4880-03324-22499052116491"
                      isOpened={false}
                      onRest={[Function]}
                    />
                  </div>
                </styled.div>
              </Component>
            </ExpandingPanel>
          </Styled(Styled(ExpandingPanel))>
          <styled.div>
            <div
              className="c14 c15"
            />
          </styled.div>
          <styled.div>
            <div
              className="c4 c16"
            />
          </styled.div>
          <Normaltekst>
            <TypografiBase
              type="normaltekst"
            >
              <p
                className="typo-normal"
              >
                ui:error-404-footer
              </p>
            </TypografiBase>
          </Normaltekst>
        </div>
      </styled.div>
    </div>
  </Component>
</Error>
`;
